--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "type": "module",
     "main": "server/plugin.js",
     "scripts": {
-        "start": "fastify start server/plugin.js -l info -P -a 0.0.0.0",
+        "start-backend": "fastify start server/plugin.js -l info -P -a 0.0.0.0",
         "lint": "npx eslint .",
         "build": "webpack",
-        "webpackServer": "webpack server",
+        "start-front": "webpack server",
         "test": "jest"
     },
     "jest": {
@@ -29,20 +29,32 @@
         "@fastify/jwt": "^6.2.1",
         "@fastify/static": "^6.4.0",
         "@fastify/view": "^7.0.0",
-        "@fastify/websocket": "^6.0.1",
         "@popperjs/core": "^2.11.5",
+        "@reduxjs/toolkit": "^1.8.3",
+        "axios": "^0.27.2",
         "core-js": "^3.23.3",
         "debug": "^4.3.4",
         "fastify": "^4.2.0",
         "fastify-cli": "^4.3.0",
+        "fastify-socket.io": "^4.0.0",
+        "formik": "^2.2.9",
         "http-errors": "^2.0.0",
         "lodash": "^4.17.21",
+        "mini-css-extract-plugin": "^2.6.1",
         "pino-pretty": "^8.1.0",
         "pug": "^3.0.2",
-        "socket.io-client": "^4.5.1"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.2.0",
+        "socket.io": "^4.5.1",
+        "socket.io-client": "^4.5.1",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@babel/core": "^7.18.6",
+        "@babel/eslint-parser": "^7.18.2",
         "@babel/preset-env": "^7.18.6",
         "@babel/preset-react": "^7.18.6",
         "@jest/globals": "^28.1.2",
@@ -58,12 +70,12 @@
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "jest": "^28.1.2",
-        "mini-css-extract-plugin": "^2.6.1",
         "postcss": "^8.4.14",
         "postcss-loader": "^7.0.0",
         "postcss-preset-env": "^7.7.2",
         "prettier": "^2.7.1",
         "tailwindcss": "^3.1.5",
+        "url-loader": "^4.1.1",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.9.3"
