--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "redux": "^4.2.0",
         "socket.io": "^4.5.1",
         "socket.io-client": "^4.5.1",
+        "timeago.js": "^4.0.2",
         "yup": "^0.32.11"
     },
     "devDependencies": {
