change Login page

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,6 +18,8 @@ parserOptions:
 
 env:
     browser: true
+    commonjs: true
+    es6: true
     node: true
     jest: true
 
@@ -46,3 +48,8 @@ rules:
                 'unnamedComponents': 'function-expression',
             },
         ]
+overrides:
+    - files:
+          - ./src/slices/*.js
+      rules:
+          no-param-reassign: 0
