--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
         "@reduxjs/toolkit": "^1.8.3",
         "axios": "^0.27.2",
         "core-js": "^3.23.3",
-        "debug": "^4.3.4",
         "fastify": "^4.2.0",
         "fastify-cli": "^4.3.0",
         "fastify-socket.io": "^4.0.0",
         "formik": "^2.2.9",
         "http-errors": "^2.0.0",
+        "i18next": "^21.8.14",
         "lodash": "^4.17.21",
         "mini-css-extract-plugin": "^2.6.1",
         "pino-pretty": "^8.1.0",
         "pug": "^3.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^11.18.1",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "redux": "^4.2.0",
