--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "main": "server/plugin.js",
     "scripts": {
-        "start-backend": "fastify start server/plugin.js -l info -P -a 0.0.0.0",
+        "start": "fastify start server/plugin.js -l info -P -a 0.0.0.0",
         "lint": "npx eslint .",
         "build": "webpack",
         "start-front": "webpack server",
@@ -48,6 +48,7 @@
         "react-i18next": "^11.18.1",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
+        "react-toastify": "^9.0.7",
         "redux": "^4.2.0",
         "socket.io": "^4.5.1",
         "socket.io-client": "^4.5.1",
