--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "main": "server/plugin.js",
     "scripts": {
-        "start-backend": "fastify start server/plugin.js -l info -P -a 0.0.0.0",
+        "start": "fastify start server/plugin.js -l info -P -a 0.0.0.0",
         "lint": "npx eslint .",
         "build": "webpack",
         "start-front": "webpack server",
