--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "jest": {
         "transform": {}
     },
+    "engines": {
+        "node": ">= 18.1.0"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/LisaProgect/real-time-chat.git"
